emacsen-common (1.4.18) unstable; urgency=low

  * Add --no-site-file and --no-init-file for the compilation of
    emacsen-common's .elc files.  Those options should be fine for
    emacsen-common itself right now.  Thanks to Peter S Galbraith
    <psg@debian.org>.  (closes: 132355)

  * Fix minor documentation bug.  Thanks to Roland Stigge
    <stigge@antcom.de>. (closes: 208414)

 --

emacsen-common (1.4.17) unstable; urgency=low

  * Remove "Conflicts: emacs".  If I recall correctly, this dates back to
    a time when the Emacs binary package was just named "emacs"
    (i.e. unversioned), and before the creation of emacsen-common and the
    Debian Emacs Policy.  The Conflicts should be safe to remove now, and
    the removal will allow us to create a new emacs-defaults source
    package (a la gcc-defaults) that will produce an emacs package that
    always depends on the current "standard" version of Emacs
    (i.e. emacs21, emacs22, etc.).
  * Update to Standards-Version to 3.6.2.

 -- Rob Browning <rlb@defaultvalue.org>  Thu,  5 Jan 2006 18:10:56 -0800

emacsen-common (1.4.16) unstable; urgency=high

  * Fix sarge RC bug.  Alter debian-pkg-add-load-path-item to handle nil
    in load-path.  Thanks to Manoj Srivastava.  (closes: 270388)
  * Include section and priorty in dpkg-gencontrol generated control file.
    (closes: 288752)
  * Don't create /usr/doc/ symlinks anymore.
  * Remove pause in 00debian-vars.el when there is no /etc/mailname.  The
    message will always be available in *Messages*.  The real fix for this
    may involve bug 149924.  (closes: 115116)
  * Ignore *~ when generating package list.  Eventually we may do
    something more like run-parts, but this is at least an improvement.
    (ref: #29494)
  * Make the package description a bit more elaborate.  (closes: 209469)
  * Fix debian-emacs-policy typo.  (closes: 175779)

 -- Rob Browning <rlb@defaultvalue.org>  Thu, 27 Jan 2005 12:27:09 -0600
